--- a/articles/eed6e05f1e4480.md
+++ b/articles/eed6e05f1e4480.md
@@ -3,7 +3,7 @@ title: "テスト投稿"
 emoji: "🎉"
 type: "tech" # tech: 技術記事 / idea: アイデア
 topics: [llm, ocr, ai, gcp]
-published: false
+published: true
 ---
 
 ## はじめに
